# ellalgo-rs

./: .bashrc  .editorconfig  .gitconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLIPPY_FIX_REPORT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  deny.toml  doc_test_output.txt  env_logger.md  ldlt_mgr_ai.rs  lefthook.yml  log.txt  lowpass_oracle_ai.rs  lowpass_oracle_ai2.rs  lowpass_oracle_ai3.rs  notes.md  profit_oracle_ai.rs  quickcheck_integration.md  spectral_fact.rs  spectral_fact_ai.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: additional-ci.yml  ci.yml  codecov.yml  grcov.bak  grcov.yml  llvm-cov.yml  release.bak  release.yml
benches/: ellipsoid.rs
examples/: portfolio_optimization.rs  quickcheck_tests.rs
python_ai/: .gitignore  README.md  pyproject.toml
python_ai/ellalgo/: __init__.py  cutting_plane.py  ell.py  ell_calc.py
python_ai/ellalgo/oracles/: __init__.py  lmi_oracle.py  profit_oracle.py
python_ai/examples/: simple_example.py
python_ai/tests/: test_cutting_plane.py  test_ell.py  test_ell_calc.py  test_oracles.py
src/: arr.rs  conceptual.rs  conjugate_gradient.rs  cutting_plane.rs  ell.rs  ell.trs  ell1d.rs  ell1d_impl.rs  ell_ai.rs  ell_calc.good  ell_calc.rs  ell_calc.trs  ell_calc_additional_tests.rs  ell_calc_core.rs  ell_calc_core.trs  ell_impl.rs  ell_stable.rs  ell_stable.trs  ell_stable_ai.rs  ell_stable_impl.rs  ell_test.rs  error.rs  example1.rs  example1_rr.rs  example2.rs  example3.rs  example4.rs  lib.rs  lib.trs  logging.rs  main.rs  power_iteration.rs  quasicvx.rs
src/oracles/: ldlt_mgr.rs  lmi0_oracle.rs  lmi_old_oracle.rs  lmi_oracle.rs  lowpass_oracle.rs  maxcut_oracle.rs  mod.rs  profit_oracle.rs  profit_oracle_impl.rs  svm_oracle.rs
tests/: cutting_plane_tests.rs  example2_tests.rs  integration_test.rs  lmi_tests.rs  numerical_stability.rs  quasicvx2_tests.rs  regression_tests.rs  stress_tests.rs
