[package]
name = "ellalgo-rs"
version = "0.1.3"
edition = "2021"
description = "Ellipsoid Method in Rust"
repository = "https://github.com/luk036/ellalgo-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:log"]
no-std = []

[dependencies]
svgbobdoc = { version = "0.3", features = ["enable"] }
ndarray = "0.16.1"
log = { version = "0.4", optional = true }
# ndarray-linalg = { version = "0.16.0" }

[dev-dependencies]
approx_eq = "0.1.8"
quickcheck = "1.0"
criterion = "0.5"
