[package]
name = "ellalgo-rs"
version = "0.1.6"
edition = "2021"
description = "Ellipsoid Method in Rust"
repository = "https://github.com/luk036/ellalgo-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "src/doc-header.html"]

[features]
default = ["std"]

# Enable std library support
# - Adds logging capabilities via the `log` crate
# - Provides integration with standard logging frameworks
# - Default feature for most use cases
std = ["dep:log"]

# No-std support for embedded systems
# - Minimal footprint without std library
# - Suitable for bare-metal and embedded applications
# - Disables logging functionality
no-std = []

[dependencies]
svgbobdoc = { version = "0.3", features = ["enable"] }
log = { version = "0.4.32", optional = true }

[dev-dependencies]
approx_eq = "0.1.8"
quickcheck = "1.0"
criterion = "0.8.2"

[[bench]]
name = "ellipsoid"
harness = false
